meja/tests/wrong_optional_arg.stderr
File "tests/wrong_optional_arg.meja", line 5, characters 32-34:
Error: Incompatable types 'a and int:
       Cannot unify option(_) and int
